--- a/.github/workflows/update-formula.yml
+++ b/.github/workflows/update-formula.yml
@@ -27,7 +27,7 @@ jobs:
           sed -i "s/version \".*\"/version \"$VERSION\"/" jira-cli-mcp.rb
 
           # Update URLs
-          sed -i "s|download/v[0-9.]*|download/v$VERSION|g" jira-cli-mcp.rb
+          sed -i "s|download/v[0-9.]*|download/$VERSION|g" jira-cli-mcp.rb
 
           # Update SHA256 values
           sed -i "s/sha256 \"[a-f0-9]*\" # darwin-arm64/sha256 \"$SHA256_DARWIN_ARM64\" # darwin-arm64/" jira-cli-mcp.rb
@@ -44,10 +44,10 @@ jobs:
         uses: peter-evans/create-pull-request@v5
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          commit-message: "chore: update formula to v${{ github.event.client_payload.version }}"
-          title: "Update formula to v${{ github.event.client_payload.version }}"
+          commit-message: "chore: update formula to ${{ github.event.client_payload.version }}"
+          title: "Update formula to ${{ github.event.client_payload.version }}"
           body: |
-            Automated update from jira-cli-mcp release v${{ github.event.client_payload.version }}
+            Automated update from jira-cli-mcp release ${{ github.event.client_payload.version }}
 
             ## SHA256 Checksums
             - darwin-arm64: `${{ github.event.client_payload.sha256_darwin_arm64 }}`
@@ -56,7 +56,7 @@ jobs:
             - linux-x64: `${{ github.event.client_payload.sha256_linux_x64 }}`
 
             ## Release Notes
-            See: https://github.com/choplin/jira-cli-mcp/releases/tag/v${{ github.event.client_payload.version }}
-          branch: update-v${{ github.event.client_payload.version }}
+            See: https://github.com/choplin/jira-cli-mcp/releases/tag/${{ github.event.client_payload.version }}
+          branch: update-${{ github.event.client_payload.version }}
           delete-branch: true
 
