--- a/.github/workflows/update-formula.yml
+++ b/.github/workflows/update-formula.yml
@@ -23,17 +23,20 @@ jobs:
           SHA256_LINUX_ARM64="${{ github.event.client_payload.sha256_linux_arm64 }}"
           SHA256_LINUX_X64="${{ github.event.client_payload.sha256_linux_x64 }}"
 
-          # Update version
-          sed -i "s/version \".*\"/version \"$VERSION\"/" jira-cli-mcp.rb
+          # Strip 'v' prefix from version for the version field
+          VERSION_WITHOUT_V="${VERSION#v}"
 
-          # Update URLs
-          sed -i "s|download/v[0-9.]*|download/$VERSION|g" jira-cli-mcp.rb
+          # Update version (without 'v' prefix)
+          sed -i "s/version \".*\"/version \"$VERSION_WITHOUT_V\"/" jira-cli-mcp.rb
 
-          # Update SHA256 values
-          sed -i "s/sha256 \"[a-f0-9]*\" # darwin-arm64/sha256 \"$SHA256_DARWIN_ARM64\" # darwin-arm64/" jira-cli-mcp.rb
-          sed -i "s/sha256 \"[a-f0-9]*\" # darwin-x64/sha256 \"$SHA256_DARWIN_X64\" # darwin-x64/" jira-cli-mcp.rb
-          sed -i "s/sha256 \"[a-f0-9]*\" # linux-arm64/sha256 \"$SHA256_LINUX_ARM64\" # linux-arm64/" jira-cli-mcp.rb
-          sed -i "s/sha256 \"[a-f0-9]*\" # linux-x64/sha256 \"$SHA256_LINUX_X64\" # linux-x64/" jira-cli-mcp.rb
+          # Update URLs (with 'v' prefix) - handle both 'v' and 'vv' cases
+          sed -i "s|download/v\{1,2\}[0-9.]*|download/$VERSION|g" jira-cli-mcp.rb
+
+          # Update SHA256 values - also handle PLACEHOLDER_SHA256_* for initial formula
+          sed -i "s/sha256 \"[a-f0-9A-F_]*\" # darwin-arm64/sha256 \"$SHA256_DARWIN_ARM64\" # darwin-arm64/" jira-cli-mcp.rb
+          sed -i "s/sha256 \"[a-f0-9A-F_]*\" # darwin-x64/sha256 \"$SHA256_DARWIN_X64\" # darwin-x64/" jira-cli-mcp.rb
+          sed -i "s/sha256 \"[a-f0-9A-F_]*\" # linux-arm64/sha256 \"$SHA256_LINUX_ARM64\" # linux-arm64/" jira-cli-mcp.rb
+          sed -i "s/sha256 \"[a-f0-9A-F_]*\" # linux-x64/sha256 \"$SHA256_LINUX_X64\" # linux-x64/" jira-cli-mcp.rb
 
       - name: Test formula syntax
         run: |
